Emit notification when base currency changes

BUG: 350904
FIXED-IN: 5.1.2